--- a/Game/Game_1.ui
+++ b/Game/Game_1.ui
@@ -115,6 +115,24 @@ border-radius: 20px</string>
     <bool>true</bool>
    </property>
   </widget>
+  <widget class="QPushButton" name="pushButton_Back">
+   <property name="geometry">
+    <rect>
+     <x>860</x>
+     <y>20</y>
+     <width>75</width>
+     <height>24</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>7</pointsize>
+    </font>
+   </property>
+   <property name="text">
+    <string>BackToMain</string>
+   </property>
+  </widget>
  </widget>
  <resources/>
  <connections/>
