--- a/Game/UI_resource/Agent_choose.ui
+++ b/Game/UI_resource/Agent_choose.ui
@@ -28,12 +28,14 @@
     </property>
     <property name="font">
      <font>
-      <pointsize>23</pointsize>
+      <family>站酷小薇LOGO体</family>
+      <pointsize>30</pointsize>
      </font>
     </property>
     <property name="styleSheet">
      <string notr="true">#pushButton{
 border-image: url(:/image/resource/Agent/对话标签2.jpg);
+color: rgb(85, 0, 0);
  }</string>
     </property>
     <property name="text">
@@ -45,13 +47,14 @@ border-image: url(:/image/resource/Agent/对话标签2.jpg);
      <rect>
       <x>60</x>
       <y>40</y>
-      <width>141</width>
+      <width>231</width>
       <height>71</height>
      </rect>
     </property>
     <property name="font">
      <font>
-      <pointsize>30</pointsize>
+      <family>站酷小薇LOGO体</family>
+      <pointsize>45</pointsize>
       <bold>true</bold>
      </font>
     </property>
@@ -60,7 +63,7 @@ border-image: url(:/image/resource/Agent/对话标签2.jpg);
 #label{letter-spacing:3px;}</string>
     </property>
     <property name="text">
-     <string>Agent</string>
+     <string>AGENT</string>
     </property>
    </widget>
    <widget class="QPushButton" name="pushButton_2">
@@ -74,11 +77,14 @@ border-image: url(:/image/resource/Agent/对话标签2.jpg);
     </property>
     <property name="font">
      <font>
-      <pointsize>23</pointsize>
+      <family>站酷小薇LOGO体</family>
+      <pointsize>30</pointsize>
      </font>
     </property>
     <property name="styleSheet">
-     <string notr="true">border-image: url(:/image/resource/Agent/对话标签2.jpg);</string>
+     <string notr="true">#pushButton_2{
+border-image: url(:/image/resource/Agent/对话标签2.jpg);
+color: rgb(85, 0, 0);}</string>
     </property>
     <property name="text">
      <string>president</string>
@@ -95,11 +101,15 @@ border-image: url(:/image/resource/Agent/对话标签2.jpg);
     </property>
     <property name="font">
      <font>
-      <pointsize>23</pointsize>
+      <family>站酷小薇LOGO体</family>
+      <pointsize>30</pointsize>
      </font>
     </property>
     <property name="styleSheet">
-     <string notr="true">border-image: url(:/image/resource/Agent/对话标签2.jpg);</string>
+     <string notr="true">#pushButton_3{
+border-image: url(:/image/resource/Agent/对话标签2.jpg);
+color: rgb(85, 0, 0);}
+</string>
     </property>
     <property name="text">
      <string>president</string>
@@ -116,11 +126,15 @@ border-image: url(:/image/resource/Agent/对话标签2.jpg);
     </property>
     <property name="font">
      <font>
-      <pointsize>23</pointsize>
+      <family>站酷小薇LOGO体</family>
+      <pointsize>30</pointsize>
      </font>
     </property>
     <property name="styleSheet">
-     <string notr="true">border-image: url(:/image/resource/Agent/对话标签2.jpg);</string>
+     <string notr="true">#pushButton_4{
+border-image: url(:/image/resource/Agent/对话标签2.jpg);
+color: rgb(85, 0, 0);}
+</string>
     </property>
     <property name="text">
      <string>president</string>
@@ -137,84 +151,32 @@ border-image: url(:/image/resource/Agent/对话标签2.jpg);
     </property>
     <property name="font">
      <font>
-      <pointsize>23</pointsize>
+      <family>站酷小薇LOGO体</family>
+      <pointsize>30</pointsize>
      </font>
     </property>
     <property name="styleSheet">
-     <string notr="true">border-image: url(:/image/resource/Agent/对话标签2.jpg);</string>
+     <string notr="true">#pushButton_5{
+border-image: url(:/image/resource/Agent/对话标签2.jpg);
+color: rgb(85, 0, 0);}</string>
     </property>
     <property name="text">
      <string>president</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton_6">
+   <widget class="QPushButton" name="exit_button">
     <property name="geometry">
      <rect>
-      <x>900</x>
+      <x>1150</x>
       <y>680</y>
       <width>100</width>
       <height>35</height>
      </rect>
     </property>
     <property name="styleSheet">
-     <string notr="true">#pushButton_6{border-image: url(:/image/resource/Agent/qload.png);}
-#pushButton_6:hover{border-image: url(:/image/resource/Agent/qload2.png);}
+     <string notr="true">#exit_button{border-image: url(:/image/resource/exit_button2.png)}
+#exit_button:hover{border-image: url(:/image/resource/exit_hover.png)}
 </string>
-    </property>
-    <property name="text">
-     <string/>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="pushButton_7">
-    <property name="geometry">
-     <rect>
-      <x>1140</x>
-      <y>680</y>
-      <width>100</width>
-      <height>35</height>
-     </rect>
-    </property>
-    <property name="styleSheet">
-     <string notr="true">#pushButton_7{border-image:url(:/image/resource/Agent/screen.png);}
-#pushButton_7:hover{
-	border-image: url(:/image/resource/Agent/screen2.png);}</string>
-    </property>
-    <property name="text">
-     <string/>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="pushButton_8">
-    <property name="geometry">
-     <rect>
-      <x>780</x>
-      <y>680</y>
-      <width>100</width>
-      <height>35</height>
-     </rect>
-    </property>
-    <property name="styleSheet">
-     <string notr="true">#pushButton_8{border-image: url(:/image/resource/Agent/qsave.png);}
-#pushButton_8:hover{border-image: url(:/image/resource/Agent/qsave2.png);}
-</string>
-    </property>
-    <property name="text">
-     <string/>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="pushButton_9">
-    <property name="geometry">
-     <rect>
-      <x>1020</x>
-      <y>680</y>
-      <width>100</width>
-      <height>35</height>
-     </rect>
-    </property>
-    <property name="styleSheet">
-     <string notr="true">#pushButton_9{
-	border-image: url(:/image/resource/Agent/title.png);}
-#pushButton_9:hover{
-	border-image: url(:/image/resource/Agent/title2.png);}</string>
     </property>
     <property name="text">
      <string/>
