--- a/Game/UI_resource/choose_model_1.ui
+++ b/Game/UI_resource/choose_model_1.ui
@@ -38,7 +38,7 @@ border-image: url(:/image1/resource/classroom.png);}</string>
     <property name="frameShadow">
      <enum>QFrame::Shadow::Raised</enum>
     </property>
-    <widget class="QLabel" name="label">
+    <widget class="QLabel" name="label_name">
      <property name="geometry">
       <rect>
        <x>70</x>
@@ -66,7 +66,7 @@ border-image: url(:/image1/resource/classroom.png);}</string>
       <set>Qt::AlignmentFlag::AlignCenter</set>
      </property>
     </widget>
-    <widget class="QLabel" name="label_2">
+    <widget class="QLabel" name="label_content">
      <property name="geometry">
       <rect>
        <x>50</x>
@@ -151,7 +151,7 @@ border-image: url(:/image1/resource/classroom.png);}</string>
      </property>
     </widget>
    </widget>
-   <widget class="QPushButton" name="pushButton">
+   <widget class="QPushButton" name="pushButton_option1">
     <property name="geometry">
      <rect>
       <x>360</x>
@@ -183,7 +183,7 @@ border-image: url(:/image1/resource/classroom.png);}</string>
      <string>好，今天晚上我们一起去自习室吧</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton_2">
+   <widget class="QPushButton" name="pushButton_option2">
     <property name="geometry">
      <rect>
       <x>360</x>
@@ -215,7 +215,7 @@ border-image: url(:/image1/resource/classroom.png);}</string>
      <string>好，今天晚上我们一起去自习室吧</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton_3">
+   <widget class="QPushButton" name="pushButton_option3">
     <property name="geometry">
      <rect>
       <x>360</x>
@@ -303,9 +303,9 @@ border-image: url(:/image1/resource/classroom.png);}</string>
    <zorder>label_8</zorder>
    <zorder>label_7</zorder>
    <zorder>frame</zorder>
-   <zorder>pushButton</zorder>
-   <zorder>pushButton_2</zorder>
-   <zorder>pushButton_3</zorder>
+   <zorder>pushButton_option1</zorder>
+   <zorder>pushButton_option2</zorder>
+   <zorder>pushButton_option3</zorder>
   </widget>
  </widget>
  <resources>
