--- a/Game/UI_resource/strength_assignment.ui
+++ b/Game/UI_resource/strength_assignment.ui
@@ -301,8 +301,8 @@ background-color:grey;</string>
      <rect>
       <x>310</x>
       <y>120</y>
-      <width>131</width>
-      <height>31</height>
+      <width>411</width>
+      <height>291</height>
      </rect>
     </property>
     <property name="font">
@@ -314,6 +314,12 @@ background-color:grey;</string>
     </property>
     <property name="text">
      <string>1.学习</string>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignmentFlag::AlignLeading|Qt::AlignmentFlag::AlignLeft|Qt::AlignmentFlag::AlignTop</set>
+    </property>
+    <property name="wordWrap">
+     <bool>true</bool>
     </property>
    </widget>
    <widget class="QLabel" name="mission_4">
