--- a/Game/UI_resource/strength_assignment.ui
+++ b/Game/UI_resource/strength_assignment.ui
@@ -480,7 +480,7 @@ background-color:grey;</string>
      <string/>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton_15">
+   <widget class="QPushButton" name="plus5">
     <property name="geometry">
      <rect>
       <x>1080</x>
@@ -519,7 +519,7 @@ background-color:grey;</string>
      <string/>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton_17">
+   <widget class="QPushButton" name="plus4">
     <property name="geometry">
      <rect>
       <x>1080</x>
@@ -580,7 +580,7 @@ background-color:grey;</string>
      <string/>
     </property>
    </widget>
-   <widget class="QPushButton" name="plus">
+   <widget class="QPushButton" name="plus2">
     <property name="geometry">
      <rect>
       <x>1080</x>
@@ -669,7 +669,7 @@ background-color:grey;</string>
      <string/>
     </property>
    </widget>
-   <widget class="QLabel" name="label_4">
+   <widget class="QLabel" name="mission1_show">
     <property name="geometry">
      <rect>
       <x>930</x>
@@ -692,7 +692,7 @@ background-color:grey;</string>
      <set>Qt::AlignmentFlag::AlignCenter</set>
     </property>
    </widget>
-   <widget class="QLabel" name="label_10">
+   <widget class="QLabel" name="mission2_show">
     <property name="geometry">
      <rect>
       <x>930</x>
@@ -715,7 +715,7 @@ background-color:grey;</string>
      <set>Qt::AlignmentFlag::AlignCenter</set>
     </property>
    </widget>
-   <widget class="QLabel" name="label_11">
+   <widget class="QLabel" name="mission3_show">
     <property name="geometry">
      <rect>
       <x>930</x>
@@ -738,7 +738,7 @@ background-color:grey;</string>
      <set>Qt::AlignmentFlag::AlignCenter</set>
     </property>
    </widget>
-   <widget class="QLabel" name="label_15">
+   <widget class="QLabel" name="mission4_show">
     <property name="geometry">
      <rect>
       <x>930</x>
@@ -761,7 +761,7 @@ background-color:grey;</string>
      <set>Qt::AlignmentFlag::AlignCenter</set>
     </property>
    </widget>
-   <widget class="QLabel" name="label_12">
+   <widget class="QLabel" name="mission5_show">
     <property name="geometry">
      <rect>
       <x>930</x>
@@ -784,7 +784,7 @@ background-color:grey;</string>
      <set>Qt::AlignmentFlag::AlignCenter</set>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton">
+   <widget class="QPushButton" name="left_button">
     <property name="geometry">
      <rect>
       <x>920</x>
@@ -800,7 +800,7 @@ background-color:grey;</string>
      <string/>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton_4">
+   <widget class="QPushButton" name="right_button">
     <property name="geometry">
      <rect>
       <x>1050</x>
@@ -816,7 +816,7 @@ background-color:grey;</string>
      <string/>
     </property>
    </widget>
-   <widget class="QLabel" name="label_13">
+   <widget class="QLabel" name="total_strength">
     <property name="geometry">
      <rect>
       <x>50</x>
@@ -853,6 +853,89 @@ background-color:grey;</string>
     <property name="text">
      <string>10000</string>
     </property>
+   </widget>
+   <widget class="QFrame" name="frame">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>160</y>
+      <width>1111</width>
+      <height>400</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">#frame{border-image: url(:/image/resource/弹窗.png);}</string>
+    </property>
+    <property name="frameShape">
+     <enum>QFrame::Shape::StyledPanel</enum>
+    </property>
+    <property name="frameShadow">
+     <enum>QFrame::Shadow::Raised</enum>
+    </property>
+    <widget class="QLabel" name="shifo_label">
+     <property name="geometry">
+      <rect>
+       <x>450</x>
+       <y>40</y>
+       <width>651</width>
+       <height>121</height>
+      </rect>
+     </property>
+     <property name="font">
+      <font>
+       <pointsize>20</pointsize>
+       <bold>false</bold>
+      </font>
+     </property>
+     <property name="text">
+      <string>学校将举办迎新晚会，你是否选择参加？</string>
+     </property>
+     <property name="alignment">
+      <set>Qt::AlignmentFlag::AlignCenter</set>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="true_button">
+     <property name="geometry">
+      <rect>
+       <x>590</x>
+       <y>290</y>
+       <width>74</width>
+       <height>77</height>
+      </rect>
+     </property>
+     <property name="font">
+      <font>
+       <pointsize>23</pointsize>
+      </font>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">border-image: url(:/image/resource/004_02.png);</string>
+     </property>
+     <property name="text">
+      <string>是</string>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="false_button">
+     <property name="geometry">
+      <rect>
+       <x>840</x>
+       <y>290</y>
+       <width>74</width>
+       <height>77</height>
+      </rect>
+     </property>
+     <property name="font">
+      <font>
+       <pointsize>23</pointsize>
+      </font>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">border-image: url(:/image/resource/004_07.png);</string>
+     </property>
+     <property name="text">
+      <string>否</string>
+     </property>
+    </widget>
    </widget>
   </widget>
  </widget>
