--- a/Game/UI_resource/allocateEnergy.ui
+++ b/Game/UI_resource/allocateEnergy.ui
@@ -43,10 +43,10 @@
      </rect>
     </property>
     <property name="styleSheet">
-     <string notr="true">#exit_button{
+     <string notr="true">#pushButton_exit{
 	border-image: url(:/image/resource/exit_button2.png);
 	}
-#exit_button:hover{
+#pushButton_exit:hover{
 	
 	border-image: url(:/image/resource/exit_hover.png);
 }</string>
@@ -65,11 +65,11 @@
      </rect>
     </property>
     <property name="styleSheet">
-     <string notr="true">#save_button{
+     <string notr="true">#pushButton_save{
 	
 	border-image: url(:/image/resource/save_button2.png);
 	}
-#save_button:hover{
+#pushButton_save:hover{
 	
 	border-image: url(:/image/resource/save_hover.png);
 	}</string>
@@ -127,13 +127,13 @@
      </font>
     </property>
     <property name="styleSheet">
-     <string notr="true">#pushButton_5{
+     <string notr="true">#pushButton_next{
 border-image: url(:/image/resource/Strength_assign/002_07.png);
 padding:10px;
 }
-#pushButton_5:hover{
+#pushButton_next:hover{
 	border-image: url(:/image/resource/Strength_assign/002_07_hover.png);}
-#pushButton_5:pressed{
+#pushButton_next:pressed{
 	border-image: url(:/image/resource/Strength_assign/002_07_click.png);}</string>
     </property>
     <property name="text">
@@ -864,7 +864,7 @@ background-color:grey;</string>
      </rect>
     </property>
     <property name="styleSheet">
-     <string notr="true">#frame{border-image: url(:/image/resource/弹窗.png);}</string>
+     <string notr="true">#frame_modal{border-image: url(:/image/resource/弹窗.png);}</string>
     </property>
     <property name="frameShape">
      <enum>QFrame::Shape::StyledPanel</enum>
@@ -957,10 +957,53 @@ border:0px;</string>
      <enum>QFrame::Shadow::Raised</enum>
     </property>
    </widget>
+   <zorder>label_energy_value</zorder>
+   <zorder>label_energy</zorder>
+   <zorder>label</zorder>
+   <zorder>pushButton_exit</zorder>
+   <zorder>pushButton_save</zorder>
+   <zorder>label_2</zorder>
+   <zorder>label_3</zorder>
+   <zorder>pushButton_next</zorder>
+   <zorder>label_optionalMission</zorder>
+   <zorder>label_mission2</zorder>
+   <zorder>label_mission3</zorder>
+   <zorder>label_5</zorder>
+   <zorder>graphicsView</zorder>
+   <zorder>label_money</zorder>
+   <zorder>label_moreEvents</zorder>
+   <zorder>label_mission1</zorder>
+   <zorder>label_mission4</zorder>
+   <zorder>label_mission5</zorder>
+   <zorder>label_mission6</zorder>
+   <zorder>label_mission7</zorder>
+   <zorder>label_mission8</zorder>
+   <zorder>label_mission9</zorder>
+   <zorder>label_mission10</zorder>
+   <zorder>pushButton_minus5</zorder>
+   <zorder>pushButton_plus5</zorder>
+   <zorder>pushButton_minus4</zorder>
+   <zorder>pushButton_plus4</zorder>
+   <zorder>pushButton_minus3</zorder>
+   <zorder>pushButton_plus3</zorder>
+   <zorder>pushButton_plus2</zorder>
+   <zorder>pushButton_minus2</zorder>
+   <zorder>pushButton_plus1</zorder>
+   <zorder>pushButton_minus1</zorder>
+   <zorder>label_mission1_listed</zorder>
+   <zorder>label_mission2_listed</zorder>
+   <zorder>label_mission3_listed</zorder>
+   <zorder>label_mission4_listed</zorder>
+   <zorder>label_mission5_listed</zorder>
+   <zorder>pushButton_previousPage</zorder>
+   <zorder>pushButton_nextPage</zorder>
+   <zorder>label_money_value</zorder>
+   <zorder>frame_modal</zorder>
+   <zorder>frame_selectArea</zorder>
   </widget>
  </widget>
  <resources>
-  <include location="resource3.qrc"/>
+  <include location="../resource/resource3.qrc"/>
  </resources>
  <connections/>
 </ui>
