--- a/Game/UI_resource/Agent_choose.ui
+++ b/Game/UI_resource/Agent_choose.ui
@@ -20,8 +20,8 @@
    <widget class="QPushButton" name="pushButton">
     <property name="geometry">
      <rect>
-      <x>160</x>
-      <y>180</y>
+      <x>470</x>
+      <y>330</y>
       <width>201</width>
       <height>81</height>
      </rect>
@@ -69,8 +69,8 @@ color: rgb(85, 0, 0);
    <widget class="QPushButton" name="pushButton_2">
     <property name="geometry">
      <rect>
-      <x>140</x>
-      <y>410</y>
+      <x>210</x>
+      <y>500</y>
       <width>200</width>
       <height>80</height>
      </rect>
@@ -93,8 +93,8 @@ color: rgb(85, 0, 0);}</string>
    <widget class="QPushButton" name="pushButton_3">
     <property name="geometry">
      <rect>
-      <x>780</x>
-      <y>440</y>
+      <x>150</x>
+      <y>210</y>
       <width>200</width>
       <height>80</height>
      </rect>
@@ -112,15 +112,15 @@ color: rgb(85, 0, 0);}
 </string>
     </property>
     <property name="text">
-     <string>president</string>
+     <string>Teacher</string>
     </property>
    </widget>
    <widget class="QPushButton" name="pushButton_4">
     <property name="geometry">
      <rect>
-      <x>540</x>
-      <y>270</y>
-      <width>200</width>
+      <x>820</x>
+      <y>460</y>
+      <width>221</width>
       <height>80</height>
      </rect>
     </property>
@@ -137,15 +137,15 @@ color: rgb(85, 0, 0);}
 </string>
     </property>
     <property name="text">
-     <string>president</string>
+     <string>interviewer</string>
     </property>
    </widget>
    <widget class="QPushButton" name="pushButton_5">
     <property name="geometry">
      <rect>
-      <x>780</x>
-      <y>140</y>
-      <width>200</width>
+      <x>690</x>
+      <y>160</y>
+      <width>461</width>
       <height>80</height>
      </rect>
     </property>
@@ -161,7 +161,7 @@ border-image: url(:/image/resource/Agent/对话标签2.jpg);
 color: rgb(85, 0, 0);}</string>
     </property>
     <property name="text">
-     <string>president</string>
+     <string>senior female schoolmate</string>
     </property>
    </widget>
    <widget class="QPushButton" name="exit_button">
