--- a/Game/resource/resource1.qrc
+++ b/Game/resource/resource1.qrc
@@ -18,6 +18,9 @@
     <file>resource/save_hover.png</file>
   </qresource>
   <qresource prefix="people">
+    <file>resource/new/00000-2737521387-removebg-preview.png</file>
+    <file>resource/new/00001-4273977208-removebg-preview.png</file>
+    <file>resource/new/00002-726064193-removebg-preview.png</file>
     <file>resource/new/boy_smile-removebg-preview.png</file>
     <file>resource/new/female_teacher1.png</file>
     <file>resource/new/female_teacher2.png</file>
